Update home and register components Added structure to home component Added TypeScript to home component Added structure to register components Added TypeScript to register components

--- a/open-sponsor/src/app/components/home/home.component.html
+++ b/open-sponsor/src/app/components/home/home.component.html
@@ -1,1 +1,22 @@
-<p>home works!</p>
+<div class="jumbotron text-center">
+    <h1>OpenSponsor</h1>
+    <p class="lead">Welcome to the open-source sponsor matching and step-work service!</p>
+    <div>
+        <a class="btn btn-primary" [routerLink]="['/register']">Register</a><a class="btn btn-secondary" [routerLink]="['/login']">Login</a>
+    </div>
+</div>
+<br>
+<div class="row">
+    <div class="col-md-4">
+        <h3>Find a Sponsor</h3>
+        <p>If you want to go through the 12-steps and need some guidance look no further.  You can find an available sponsor here that will take you through the steps.</p>
+    </div>
+    <div class="col-md-4">
+        <h3>Be a Sponsor</h3>
+        <p>Are you experienced at taking other people through the 12-steps and want to find more people to help?  Register here and select \"Looking to take other people through the steps.\"</p>
+    </div>
+    <div class="col-md-4">
+        <h3>Make step-work modules</h3>
+        <p>Want to make an impact on more people?  Create your own modules for taking others through step-work.  Share your experience, strengh, and hope with others by making learning modules to help others go through the steps.</p>
+    </div>
+</div>
