--- a/open-sponsor/src/app/components/navbar/navbar.component.html
+++ b/open-sponsor/src/app/components/navbar/navbar.component.html
@@ -14,6 +14,9 @@
             <a class="nav-link" [routerLink]="['/register']">Register</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" (click)="onLogoutClick()" href="#">Logout</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
           </li>
           <li class="nav-item dropdown">
