--- a/open-sponsor/src/app/components/register/register.component.html
+++ b/open-sponsor/src/app/components/register/register.component.html
@@ -14,7 +14,7 @@
     </div>
     <div class="form-group">
         <label>Password</label>
-        <input type="text" [(ngModel)]="password" name="password" class="form-control">
+        <input type="password" [(ngModel)]="password" name="password" class="form-control">
     </div>
     <input type="submit" class="btn btn-primary" value="Submit">
 </form>
