Multiple Updates Added AuthGuard Service to protect routing Added Public build for running on a server Added Structure Directives for Login/Logout

--- a/open-sponsor/src/app/components/dashboard/dashboard.component.html
+++ b/open-sponsor/src/app/components/dashboard/dashboard.component.html
@@ -1,1 +1,4 @@
-<p>dashboard works!</p>
+<div class="jumbotron text-center">
+    <h2 class="page-header">Dashboard</h2>
+    <p>Welcome to your Dashboard</p>
+</div>
