--- a/open-sponsor/src/app/components/home/home.component.html
+++ b/open-sponsor/src/app/components/home/home.component.html
@@ -2,7 +2,7 @@
     <h1>OpenSponsor</h1>
     <p class="lead">Welcome to the open-source sponsor matching and step-work service!</p>
     <div>
-        <a class="btn btn-primary" [routerLink]="['/register']">Register</a><a class="btn btn-secondary" [routerLink]="['/login']">Login</a>
+        <a class="btn btn-primary" [routerLink]="['/register']">Register</a>&nbsp;<a class="btn btn-secondary" [routerLink]="['/login']">Login</a>
     </div>
 </div>
 <br>
@@ -13,7 +13,7 @@
     </div>
     <div class="col-md-4">
         <h3>Be a Sponsor</h3>
-        <p>Are you experienced at taking other people through the 12-steps and want to find more people to help?  Register here and select \"Looking to take other people through the steps.\"</p>
+        <p>Are you experienced at taking other people through the 12-steps and want to find more people to help?  Register here and select "Looking to take other people through the steps."</p>
     </div>
     <div class="col-md-4">
         <h3>Make step-work modules</h3>
