--- a/open-sponsor/src/app/components/navbar/navbar.component.html
+++ b/open-sponsor/src/app/components/navbar/navbar.component.html
@@ -7,25 +7,30 @@
 
       <div class="collapse navbar-collapse justify-content-end" id="navbar">
         <ul class="navbar-nav">
-          <li class="nav-item" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}">
-            <a class="nav-link" aria-current="page" [routerLink]="['/']">Home</a>
+          <li *ngIf="authService.loggedIn()" class="nav-item" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}">
+            <a class="nav-link" aria-current="page" [routerLink]="['/dashboard']">Dashboard</a>
           </li>
-          <li class="nav-item" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}">
+          <li *ngIf="!authService.loggedIn()" class="nav-item" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}">
             <a class="nav-link" [routerLink]="['/register']">Register</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" (click)="onLogoutClick()" href="#">Logout</a>
+          <li *ngIf="!authService.loggedIn()" class="nav-item" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}">
+            <a class="nav-link" [routerLink]="['/login']">Login</a>
           </li>
+          <!-- Disabled example
           <li class="nav-item">
             <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
           </li>
-          <li class="nav-item dropdown">
+          -->
+          <li *ngIf="authService.loggedIn()" class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" [routerLink]="['/profile']" id="dropdown" data-bs-toggle="dropdown" aria-expanded="false">Profile</a>
             <ul class="dropdown-menu" aria-labelledby="dropdown">
               <li><a class="dropdown-item" href="#">Action</a></li>
               <li><a class="dropdown-item" href="#">Another action</a></li>
               <li><a class="dropdown-item" href="#">Something else here</a></li>
             </ul>
+          </li>
+          <li *ngIf="authService.loggedIn()" class="nav-item">
+            <a class="nav-link" (click)="onLogoutClick()" href="#">Logout</a>
           </li>
         </ul>
         <!--
