--- a/open-sponsor/src/app/components/profile/profile.component.html
+++ b/open-sponsor/src/app/components/profile/profile.component.html
@@ -1,1 +1,15 @@
-<p>profile works!</p>
+<div *ngIf="user; else elseBlock">
+    <h2 class="page-header">Hello {{user.name}}!</h2>
+    <ul class="list-group">
+        <li class="list-group-item">Name: {{user.name}}</li>
+        <li class="list-group-item">Username: {{user.username}}</li>
+        <li class="list-group-item">Email: {{user.email}}</li>
+    </ul>
+</div>
+<ng-template #elseBlock>
+    <div class="jumbotron text-center">
+        <h2>You are not logged in!</h2>
+        <br>
+        <a class="btn btn-primary" [routerLink]="['/register']">Register</a>&nbsp;<a class="btn btn-secondary" [routerLink]="['/login']">Login</a>
+    </div>
+</ng-template>
