Updated user-list to show current user

--- a/open-sponsor/src/app/components/chatroom/user-list/user-list.component.html
+++ b/open-sponsor/src/app/components/chatroom/user-list/user-list.component.html
@@ -1,1 +1,6 @@
-<p>user-list works!</p>
+<div *ngIf="user;">
+    <p>{{ user.username }}</p>
+    <!--
+    For loop over currently logged in users
+    -->
+</div>
