--- a/open-sponsor/src/app/components/chatroom/user-list/user-list.component.html
+++ b/open-sponsor/src/app/components/chatroom/user-list/user-list.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="user;">
-    <p>{{ user.username }}</p>
+    <p>@{{ user.username }}</p>
     <!--
     For loop over currently logged in users
     -->
