Update chat-feed and message components

--- a/open-sponsor/src/app/components/chatroom/chat-feed/chat-feed.component.html
+++ b/open-sponsor/src/app/components/chatroom/chat-feed/chat-feed.component.html
@@ -1,5 +1,10 @@
 <div class="feed">
+    Feed
+    <!--
+    <app-chat-message [chatMessage]=message></app-chat-message>
+
     <div *ngFor="let message of feed | async" class="message">
         <app-chat-message [chatMessage]=message></app-chat-message>
     </div>
+    -->
 </div>
