--- a/open-sponsor/src/app/components/chatroom/user-list/user-list.component.html
+++ b/open-sponsor/src/app/components/chatroom/user-list/user-list.component.html
@@ -1,6 +1,8 @@
-<div *ngIf="user;">
-    <p>@{{ user.username }}</p>
-    <!--
-    For loop over currently logged in users
-    -->
+<div class="">
+    <div *ngIf="user;" class="some-css">
+        <span>@{{ user.username }}</span>
+        <!--
+        For loop over currently logged in users
+        -->
+    </div>
 </div>
