--- a/open-sponsor/src/app/components/register/register.component.html
+++ b/open-sponsor/src/app/components/register/register.component.html
@@ -2,19 +2,32 @@
 <form (submit)="onRegisterSubmit()">
     <div class="form-group">
         <label>Name</label>
-        <input type="text" [(ngModel)]="name" name="name" class="form-control">
+        <input type="text" [(ngModel)]="user.name" name="user.name" class="form-control">
     </div>
     <div class="form-group">
         <label>Username</label>
-        <input type="text" [(ngModel)]="username" name="username" class="form-control">
+        <input type="text" [(ngModel)]="user.username" name="user.username" class="form-control">
     </div>
     <div class="form-group">
         <label>Email</label>
-        <input type="text" [(ngModel)]="email" name="email" class="form-control">
+        <input type="text" [(ngModel)]="user.email" name="user.email" class="form-control">
     </div>
     <div class="form-group">
         <label>Password</label>
-        <input type="password" [(ngModel)]="password" name="password" class="form-control">
+        <input type="password" [(ngModel)]="user.password" name="user.password" class="form-control">
+    </div>
+    <div class="checkbox text-center">
+        <label>Looking for a sponsor?&nbsp;&nbsp;</label>
+        <input type="checkbox" [(ngModel)]="user.lfsponsor" name="user.lfsponsor" class="form-checkbox">
+        <span>&nbsp;&nbsp;&nbsp;&nbsp;</span>
+        <label>Looking to sponsor someone?&nbsp;&nbsp;</label>
+        <input type="checkbox" [(ngModel)]="user.sponsoring" name="user.sponsoring" class="form-checkbox">
+    </div>
+    <div class="form-group">
+        <label>Biography</label>
+        <div class="text-center">
+            <textarea class="form-textarea" rows="5" cols="80" [(ngModel)]="user.bio" name="user.bio"></textarea>
+        </div>
     </div>
     <input type="submit" class="btn btn-primary" value="Submit">
 </form>
