Fix Biography saving on registration

--- a/open-sponsor/src/app/components/register/register.component.html
+++ b/open-sponsor/src/app/components/register/register.component.html
@@ -26,7 +26,7 @@
     <div class="form-group">
         <label>Biography</label>
         <div class="text-center">
-            <textarea class="form-textarea" rows="5" cols="80" [(ngModel)]="user.bio" name="user.bio"></textarea>
+            <textarea [(ngModel)]="user.bio" name="user.bio" rows="5" cols="80"></textarea>
         </div>
     </div>
     <input type="submit" class="btn btn-primary" value="Submit">
