--- a/open-sponsor/src/app/components/chatroom/chat-message/chat-message.component.html
+++ b/open-sponsor/src/app/components/chatroom/chat-message/chat-message.component.html
@@ -1,5 +1,5 @@
 <div class="message-container">
     <p>{{ username }}</p>
     <p>{{ timestamp }}</p>
-    <p>{{ messageContent }}</p>
+    <p>{{ message }}</p>
 </div>
