Scaffold for project 8-week end

--- a/open-sponsor/src/app/components/navbar/navbar.component.html
+++ b/open-sponsor/src/app/components/navbar/navbar.component.html
@@ -20,6 +20,8 @@
             <ul class="dropdown-menu" aria-labelledby="dropdown">
                 <li><a class="dropdown-item" [routerLink]="['/profile']">My Profile</a></li>
                 <li><a class="dropdown-item" [routerLink]="['/chatroom']">My Chatroom</a></li>
+                <li><a class="dropdown-item disabled" [routerLink]="['/messages']">My Messages</a></li>
+                <li><a class="dropdown-item disabled" [routerLink]="['/requests']">My Requests</a></li>
                 <li><a class="dropdown-item disabled" href="#">My Step-Work</a></li>
             </ul>
           </li>
