Update chat and connect features

--- a/open-sponsor/src/app/components/chatroom/chatroom.component.html
+++ b/open-sponsor/src/app/components/chatroom/chatroom.component.html
@@ -1,12 +1,12 @@
-<div class="dropdown">
-  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-    Chatroom
+<div class="btn-group">
+  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+    {{ title }}
   </button>
-  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-    <a class="dropdown-item" href="#">Action</a>
-    <a class="dropdown-item" href="#">Another action</a>
-    <a class="dropdown-item" href="#">Something else here</a>
-  </div>
+  <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+      <div *ngFor="let chats of rooms">
+          <li><a class="dropdown-item" (click)="filterMessages(chats)">{{ chats.room }}</a></li>
+        </div>
+  </ul>
 </div>
 <div class="main-chat jumbotron">
     <table class="table">
