Add Learning Module support

--- a/open-sponsor/src/app/components/navbar/navbar.component.html
+++ b/open-sponsor/src/app/components/navbar/navbar.component.html
@@ -29,7 +29,7 @@
                 <li><a class="dropdown-item" [routerLink]="['/createModules']">Create Module</a></li>
                 <li><a class="dropdown-item" [routerLink]="['/editModules']">Edit My Modules</a></li>
                 <li><a class="dropdown-item" [routerLink]="['/findModules']">Find Modules</a></li>
-                <li><a class="dropdown-item" [routerLink]="['/stepwork']">My Step-Work</a></li>
+                <li><a class="dropdown-item" [routerLink]="['/stepwork']">Step-Work</a></li>
             </ul>
           </li>
           <li *ngIf="authService.loggedIn()" class="nav-item">
