--- a/open-sponsor/src/app/components/edit-learning/edit-learning.component.html
+++ b/open-sponsor/src/app/components/edit-learning/edit-learning.component.html
@@ -1,1 +1,28 @@
-<p>edit-learning works!</p>
+<h2 class="page-header text-center">Edit Stepwork Learning Module</h2>
+<form (submit)="onSaveModule()">
+    <div class="form-group">
+        <label>Title</label>
+        <input type="text" [(ngModel)]="learn.title" name="learn.title" class="form-control">
+    </div>
+    <div class="form-group">
+        <label>Step</label>
+        <input type="text" [(ngModel)]="learn.step" name="learn.step" class="form-control">
+    </div>
+    <div class="form-group">
+        <label>Learning Content</label>
+        <div class="text-center">
+            <textarea [(ngModel)]="learn.content" name="learn.content" rows="10" cols="80"></textarea>
+        </div>
+    </div>
+    <div class="form-group">
+        <label>Stepwork Working Area</label>
+        <div class="text-center">
+            <textarea [(ngModel)]="learn.stepwork" name="learn.stepwork" rows="10" cols="80"></textarea>
+        </div>
+    </div>
+    <div class="text-center">
+        <input type="submit" class="btn btn-primary" value="Save Module">
+        <label>&nbsp;&nbsp;</label>
+        <button [routerLink]="['/myPublishedModules']" type="button" class="btn btn-secondary" value="Cancel">Cancel</button>
+    </div>
+</form>
